--- a/dpkg/DEBIAN/control
+++ b/dpkg/DEBIAN/control
@@ -1,12 +1,12 @@
 Package: ovpn-tool
-Version: 0.7.1-4-ge6326af
+Version: 0.8.0
 Section: misc
 Priority: optional
 Architecture: all
 Maintainer: Robert McLeod <robert@penguinpower.co.nz>
 Essential: no
 Homepage: http://example.com
-Installed-Size: 19810
+Installed-Size: 19822
 Description: Tool for managing the OpenVPN service
   Command line tool to help with setting up and administering an
   OpenVPN server.  Also includes an API service to help with
