--- a/build
+++ b/build
@@ -27,13 +27,11 @@ PWD=`pwd`
 
 Static=0
 Dryrun=0
-Prodver=0.1
+Prodver=""
 Verbose=0
 
 hostos=$(go env GOHOSTOS)       || exit 1
 hostcpu=$(go env GOHOSTARCH)    || exit 1
-
-[ -f ./version ] && Prodver=$(cat ./version)
 
 die() {
     echo "$Z: $@" 1>&2
@@ -102,7 +100,8 @@ And, PROGS is one or more go programs.
 
 With no arguments, $0 builds: $Progs (source in ./src/)
 
-If ./version is present, its content are used as version number for the binary.
+The repository's latest tag is used as the default version of the software being
+built.
 
 Options:
     -h, --help          Show this help message and quit
@@ -301,13 +300,20 @@ if [ -d "./.hg" ]; then
     else
         rev="hg:${brev}"
     fi
+    if [ -z "$Prodver" ]; then
+        Prodver=$(hg log -r "branch(stable) and tag()" -T "{tags}\n" | tail -1)
+    fi
 elif [ -d "./.git" ]; then
     xrev=$(git describe --always --dirty --long --abbrev=12) || exit 1
     rev="git:$xrev"
+    if [ -z "$Prodver" ]; then
+        Prodver=$(git tag --list | tail -1)
+    fi
 else
     rev="UNKNOWN-VER"
     echo "$0: Can't find version info" 1>&2
 fi
+
 
 # Do Protobufs if needed
 if [ -n "$Protobufs" ]; then
